# CPPTest

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: AppConfig.h
scripts/: 3rdinstall.sh  prepare_env.sh
src/: AppConfig.cpp
static/: config.yaml
